# iac-cookbook

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
engine/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
engine/alembic/: env.py
engine/alembic/versions/: 001_initial_schema.py  002_add_settings.py
engine/nimbus/: __init__.py  app.py  common.py  config.py  db.py
engine/nimbus/api/: alerts.py  audit.py  backup.py  budget.py  errors.py  health.py  orchestration.py  providers.py  resources.py  schemas.py  settings.py  ws.py
engine/nimbus/cli/: main.py
engine/nimbus/middleware/: __init__.py
engine/nimbus/models/: __init__.py  action_log.py  budget.py  provider.py  resource.py  setting.py
engine/nimbus/providers/: base.py
engine/nimbus/services/: alerts.py  backup.py  budget_monitor.py  health.py  naming.py  orchestrator.py  registry.py  resilience.py  scheduler.py  spending_sync.py
engine/tests/: conftest.py  test_api.py  test_auth.py  test_auth_middleware.py  test_budget.py  test_cloudflare.py  test_compute.py  test_config.py  test_e2e.py  test_integration.py  test_naming.py  test_orchestration.py  test_phase5.py  test_phase6.py  test_phase7.py  test_proxmox.py  test_registry.py  test_resilience.py
oci/: pyproject.toml  requirements.txt
oci/docs/: reprovision-vm.md  setup-api-key.md
oci/lib/: auth.sh  cloud-init.sh  common.sh  compute.sh  networking.sh  storage.sh
oci/oci_iac/: __init__.py  cli.py  cloud_init.py  common.py  compute.py  networking.py  storage.py
oci/scripts/: reprovision-vm.sh
oci/templates/: instance-config.template  oci-config.template  ssh-config.template
oci/templates/cloud-init/: basic-ubuntu.yaml  cloudpanel-ubuntu.yaml
oci/tests/: test_auth.py
(+78 files in other folders)
