[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "oci-iac"
version = "0.1.0"
description = "Interactive OCI infrastructure automation — reprovisioning, storage, networking"
readme = "docs/reprovision-vm.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "oci>=2.130.0",
    "click>=8.1",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.10",
]

[project.scripts]
oci-iac = "oci_iac.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["oci_iac*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
